sysdeps/freebsd/fsusage.c
@@ -11,7 +11,7 @@
 #include <sys/param.h>
 #include <sys/mount.h>
 #include <sys/statvfs.h>
-#if __FreeBSD_version >= 600000 || defined(__FreeBSD_kernel__)
+#if 0
 #include <libgeom.h>
 #include <sys/resource.h>
 #include <devstat.h>
@@ -32,7 +32,7 @@ _glibtop_get_fsusage_read_write (glibtop *server, glibtop_fsusage *buf, const ch
 {
         int result;
         struct statfs sfs;
-#if __FreeBSD_version >= 600000 || defined(__FreeBSD_kernel__)
+#if 0
         struct devstat *ds;
         void *sc;
         struct timespec ts;
@@ -49,7 +49,7 @@ _glibtop_get_fsusage_read_write (glibtop *server, glibtop_fsusage *buf, const ch
                 glibtop_warn_io_r (server, "statfs");
                 return;
         }
-#if __FreeBSD_version >= 600000 || defined(__FreeBSD_kernel__)
+#if 0
         ld[0] = 0;
         ld[1] = 0;
         result = geom_gettree (&gmp);
